allprojects {
    group = 'com.starriverdata'
    version = '1.0.0-SNAPSHOT'
    repositories {
        mavenLocal()
        maven { url "https://maven.aliyun.com/repository/spring" }
        maven { url "https://maven.aliyun.com/repository/central" }
        maven { url "https://maven.aliyun.com/repository/google" }
        maven { url "https://maven.aliyun.com/repository/jcenter" }
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
}

buildscript {
    repositories {
        maven { url "https://maven.aliyun.com/repository/gradle-plugin" }
        maven { url "https://maven.aliyun.com/repository/spring-plugin" }
    }
}

wrapper {
    gradleVersion = '6.3'
}